# palimpsest

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  mypy.ini  pyproject.toml  sonar-project.properties
.github/workflows/: sonarqube.yml
.opencode/: opencode.json
.opencode/command/: speckit.plan.md
.specify/integrations/: opencode.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
config/: env.py
docs/: prd.md
specs/001-terminal-hypergraph-mvp/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-graph-forking/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-terminal-hypergraph-mvp/: spec.md
specs/003-tui-graph-forking/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: main.py
src/agents/: __init__.py  llm_mutation_proposer.py  mutation_agent.py  mutation_engine.py  narrative_context_builder.py  scene_agent.py
src/cli/: __init__.py  main.py
src/config/: __init__.py  env.py  logging_config.py
src/graph/: __init__.py  session_graph.py  utils.py
src/models/: __init__.py  commands.py  common.py  edge.py  errors.py  events.py  execution.py  export.py  fork_point.py  fork_request.py  graph.py  graph_instance.py  graph_lineage.py  graph_registry.py  graph_session.py  multi_graph_view.py  mutation.py  narrative_context.py  node.py  requests.py  responses.py  seed_config.py  session.py  status_snapshot.py  telemetry.py  views.py
src/persistence/: __init__.py  graph_store.py  (+1 more)
tests/: __init__.py  main_test.py
(+131 files in other folders)
