[project]
name = "palimpsest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-openai>=1.1.12",
    "langgraph>=1.1.4",
    "networkx>=3.6.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "textual>=8.2.3",
]

[dependency-groups]
dev = [
    "mypy>=1.20.0",
    "pre-commit>=4.5.1",
    "ruff>=0.15.8",
    "types-networkx>=3.6.1.20260402",
    "types-pexpect>=4.9.0.20260127",
    "types-pygments>=2.20.0.20260406",
    "types-pyyaml>=6.0.12.20250915",
]
test = [
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
]

[tool.pytest.ini_options]
pythonpath = [".", "src"]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
markers = [
    "unit: unit test coverage for isolated components",
    "integration: integration test coverage for runtime workflows",
    "contracts: contract test coverage for typed schemas",
]

[tool.ruff]
src = ["src", "tests"]

[tool.ruff.lint]
extend-select = ["I"]
